RESOLVED FIXED279414
Fix more smart pointer warnings in Source/WebKit
https://bugs.webkit.org/show_bug.cgi?id=279414
Summary Fix more smart pointer warnings in Source/WebKit
Ryosuke Niwa
Reported 2024-09-09 21:42:33 PDT
Deploy more smart pointers to fix clans static analysis warnings in Source/WebKIt.
Attachments
Ryosuke Niwa
Comment 1 2024-09-09 21:45:22 PDT
EWS
Comment 2 2024-09-10 18:35:14 PDT
Committed 283452@main (d72a3c2f4f37): <https://commits.webkit.org/283452@main> Reviewed commits have been landed. Closing PR #33370 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-10 18:36:15 PDT
Note You need to log in before you can comment on or make changes to this bug.